.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Removed the zserverPatch. There's not many people running ZServer as the
  front-end web server anymore, so this isn't particular useful.
  [hannosch]

- Fixed the default portlet blacklisting for the `Members` folder.
  [hannosch]

- Replaced Products.ATReferenceBrowserWidget with
  archetypes.referencebrowserwidget. This is PLIP 9258
  http://dev.plone.org/plone/ticket/9258
  [tom_gross]

- Clarified help text for extension profiles on the add site form.
  [davisagli]

- Added a mechanism for specifying profiles that are selected by default on
  the add site form. This should be kept in sync with PloneTestCase's list
  of default extension profiles.
  [davisagli]

- Hide the plonetheme.sunburst uninstall profile from the add site form.
  [davisagli]

- Default to plonetheme.sunburst for new sites.
  [esteele, davisagli]

- Allow email addresses as login name, with a switch on the security
  panel. This is plip 9214: Refs http://dev.plone.org/plone/ticket/9214.
  [maurits]

- Extend the language specific default configuration to set a reasonable first
  day of week on the calendar tool.
  [hannosch]

- Stop pretending to use GenericSetup's content import. As a last item we now
  create the translated front-page purely in imperative code. As a bonus we
  moved the body text of the front-page to a page template, so i18ndude can
  automatically extract it.
  [hannosch]

- Create and configure `Members` folder purely in setupPortalContent.
  [hannosch]

- Converted import and export steps XML files to use ZCML registrations.
  [hannosch]

- Made sure to have a complete list of non-installable profiles. No longer
  apply the filter to base profiles and ignore our default profile. This works