@@ -105,7 +105,6 @@
       title="Final Plone Config"
       description="Final Plone configuration.">
    <depends name="kss_mimetype" />
-   <depends name="plone_various" />
    <depends name="portlets" />
   </genericsetup:importStep>
 
@@ -115,21 +114,6 @@
       title="Plone Site Config"
       description="Plone site configuration.">
   </genericsetup:importStep>
-
- <genericsetup:importStep
-     name="plone_various"
-     handler="Products.CMFPlone.setuphandlers.importVarious"
-     title="Various Plone Settings"
-     description="Plone specific settings">
-  <depends name="catalog"/>
-  <depends name="cssregistry"/>
-  <depends name="kssregistry"/>
-  <depends name="jsregistry"/>
-  <depends name="propertiestool"/>
-  <depends name="rolemap"/>
-  <depends name="skins"/>
-  <depends name="typeinfo"/>
- </genericsetup:importStep>
 
   <genericsetup:importStep
       name="propertiestool"
@@ -152,7 +136,6 @@
       handler="Products.CMFDiffTool.exportimport.difftool.importDiffTool"
       title="Diff Tool"
       description="Import CMFDiffTool settings">
-    <depends name="plone_various"/>
   </genericsetup:importStep>
 
   <genericsetup:exportStep
