@@ -2,9 +2,13 @@
 <metadata>
   <version>3.1</version>
   <dependencies>
+    <dependency>profile-plone.protect:default</dependency>
+    <dependency>profile-kupu:default</dependency>
+    <dependency>profile-Products.PlonePAS:PlonePAS</dependency>
+    <dependency>profile-Products.PloneLanguageTool:PloneLanguageTool</dependency>
+    <dependency>profile-Products.CMFEditions:CMFEditions</dependency>
+    <dependency>profile-archetypes.referencebrowserwidget:default</dependency>
     <dependency>profile-plone.portlet.static:default</dependency>
     <dependency>profile-plone.portlet.collection:default</dependency>
-    <dependency>profile-plone.protect:default</dependency>
-    <dependency>profile-archetypes.referencebrowserwidget:default</dependency>
   </dependencies>
 </metadata>
